syntax = "proto3";

package ledger.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Deevins/final-task-course-2-go-lang/ledger/internal/pb/ledger/v1";

message Transaction {
  string id = 1;
  string account_id = 2;
  double amount = 3;
  string currency = 4;
  string category = 5;
  string description = 6;
  google.protobuf.Timestamp occurred_at = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message Budget {
  string id = 1;
  string account_id = 2;
  string name = 3;
  double amount = 4;
  string currency = 5;
  string period = 6;
  google.protobuf.Timestamp month = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message Report {
  string id = 1;
  string account_id = 2;
  string name = 3;
  string period = 4;
  google.protobuf.Timestamp generated_at = 5;
  double total_income = 6;
  double total_expense = 7;
  string currency = 8;
}

message CreateTransactionRequest {
  Transaction transaction = 1;
}

message GetTransactionRequest {
  string id = 1;
}

message UpdateTransactionRequest {
  Transaction transaction = 1;
}

message DeleteTransactionRequest {
  string id = 1;
}

message ListTransactionsRequest {
  string account_id = 1;
  int32 limit = 2;
  string page_token = 3;
}

message ListTransactionsResponse {
  repeated Transaction transactions = 1;
  string next_page_token = 2;
}

message TransactionResponse {
  Transaction transaction = 1;
}

message DeleteResponse {
  bool deleted = 1;
}

message CreateBudgetRequest {
  Budget budget = 1;
}

message GetBudgetRequest {
  string id = 1;
  string account_id = 2;
}

message UpdateBudgetRequest {
  Budget budget = 1;
}

message DeleteBudgetRequest {
  string id = 1;
  string account_id = 2;
}

message ListBudgetsRequest {
  string account_id = 1;
  int32 limit = 2;
  string page_token = 3;
}

message ListBudgetsResponse {
  repeated Budget budgets = 1;
  string next_page_token = 2;
}

message BudgetResponse {
  Budget budget = 1;
}

message CreateReportRequest {
  Report report = 1;
}

message GetReportRequest {
  string id = 1;
  string account_id = 2;
}

message UpdateReportRequest {
  Report report = 1;
}

message DeleteReportRequest {
  string id = 1;
  string account_id = 2;
}

message ListReportsRequest {
  string account_id = 1;
  int32 limit = 2;
  string page_token = 3;
}

message ListReportsResponse {
  repeated Report reports = 1;
  string next_page_token = 2;
}

message ReportResponse {
  Report report = 1;
}

message ImportTransactionsCsvRequest {
  bytes csv_content = 1;
  bool has_header = 2;
  string account_id = 3;
}

message ImportTransactionsCsvResponse {
  int32 imported = 1;
}

message ExportTransactionsCsvRequest {
  string account_id = 1;
}

message ExportTransactionsCsvResponse {
  bytes csv_content = 1;
}

service LedgerService {
  rpc CreateTransaction(CreateTransactionRequest) returns (TransactionResponse);
  rpc GetTransaction(GetTransactionRequest) returns (TransactionResponse);
  rpc UpdateTransaction(UpdateTransactionRequest) returns (TransactionResponse);
  rpc DeleteTransaction(DeleteTransactionRequest) returns (DeleteResponse);
  rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse);

  rpc CreateBudget(CreateBudgetRequest) returns (BudgetResponse);
  rpc GetBudget(GetBudgetRequest) returns (BudgetResponse);
  rpc UpdateBudget(UpdateBudgetRequest) returns (BudgetResponse);
  rpc DeleteBudget(DeleteBudgetRequest) returns (DeleteResponse);
  rpc ListBudgets(ListBudgetsRequest) returns (ListBudgetsResponse);

  rpc CreateReport(CreateReportRequest) returns (ReportResponse);
  rpc GetReport(GetReportRequest) returns (ReportResponse);
  rpc UpdateReport(UpdateReportRequest) returns (ReportResponse);
  rpc DeleteReport(DeleteReportRequest) returns (DeleteResponse);
  rpc ListReports(ListReportsRequest) returns (ListReportsResponse);

  rpc ImportTransactionsCsv(ImportTransactionsCsvRequest) returns (ImportTransactionsCsvResponse);
  rpc ExportTransactionsCsv(ExportTransactionsCsvRequest) returns (ExportTransactionsCsvResponse);
}
